logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T080000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T14:14:21.561+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T08:00:00+00:00 [queued]>
[2025-07-24T14:14:21.568+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T08:00:00+00:00 [queued]>
[2025-07-24T14:14:21.569+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T14:14:21.580+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 08:00:00+00:00
[2025-07-24T14:14:21.585+0000] {standard_task_runner.py:60} INFO - Started process 406 to run task
[2025-07-24T14:14:21.588+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T08:00:00+00:00', '--job-id', '492', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmprbf8s0iz']
[2025-07-24T14:14:21.591+0000] {standard_task_runner.py:88} INFO - Job 492: Subtask Load_songplays_fact_table
[2025-07-24T14:14:21.652+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T08:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:14:21.722+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T08:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T08:00:00+00:00'
[2025-07-24T14:14:21.728+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:14:21.739+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T080000, start_date=20250724T141421, end_date=20250724T141421
[2025-07-24T14:14:21.749+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 492 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 406)
[2025-07-24T14:14:21.761+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:14:21.935+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:25:18.145+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T08:00:00+00:00 [queued]>
[2025-07-24T17:25:18.170+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T08:00:00+00:00 [queued]>
[2025-07-24T17:25:18.174+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:25:18.203+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 08:00:00+00:00
[2025-07-24T17:25:18.232+0000] {standard_task_runner.py:60} INFO - Started process 2086 to run task
[2025-07-24T17:25:18.239+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T08:00:00+00:00', '--job-id', '2258', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp5jyu6o5y']
[2025-07-24T17:25:18.247+0000] {standard_task_runner.py:88} INFO - Job 2258: Subtask Load_songplays_fact_table
[2025-07-24T17:25:18.637+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T08:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:25:19.506+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T08:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T08:00:00+00:00'
[2025-07-24T17:25:27.805+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:25:28.203+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T080000, start_date=20250724T172518, end_date=20250724T172528
[2025-07-24T17:25:29.011+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:25:29.229+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
